--- a/templates/registration.html
+++ b/templates/registration.html
@@ -15,9 +15,10 @@
 {% block body1 %}
 {#<div class="container">#}
 {#    <div class="row">#}
-    <div class="col-lg-3 col-lg-offset-4 centered">
-        <div id="headerwrap">
-            <div class="col-lg-12">
+        <div class="col-xs-4 col-xs-offset-4 centered">
+            <div id="headerwrap1">
+                <div class="row">
+{#            <div class="col-lg-12">#}
 
                 <form action="" method="post">
                    {% csrf_token %}
@@ -26,13 +27,12 @@
 
                     {{ form.as_p }}
                     <button type="submit">Зарегистрироваться</button>
-
+                    <br>
                     <button href={% url "login_url" %}>Войти</button>
-
+                    <br>
 
                 </form>
+                </div>
             </div>
         </div>
-{#    </div>#}
-    </div>
 {% endblock %}
