--- a/templates/run1.html
+++ b/templates/run1.html
@@ -10,36 +10,49 @@
 
 
 {% block body1 %}
+    {% if success %}
+        <script>
+            alert('Добавил бро')
+        </script>
+    {%  endif %}
 
     <div class="container">
         <div class="row">
+        <br><br>
             {% if request.user.is_authenticated %}
-                <div class="col-lg-8 center">
+                <div class="col-xs-1">
+                    <a href={% url "runs_url" %}>
+                        <div class="fa fa-arrow-circle-left"></div>
+                    </a>
+
+                </div>
+
+                <div class="col-xs-8 center">
 {#                        {% if horse.photo %}#}
 {#                            <img src="{{ horse.photo.url }}" width="30%" height="30%">#}
 {#                        {% endif %}#}
-                    <caption class="fa-3x"><a href={% url "runs_url" %}> К списку забегов  </a></caption>
+{#                    <caption class="fa-3x"><a href={% url "runs_url" %}> К списку забегов  </a></caption>#}
                     {% for run in runs %}
                         <table>
-                            <h3>Забег номер {{ run.id }}</h3>
-                            <tr href="#" data-href-template="#" class="fa-2x">
+                            <caption class="centered"><h3>Забег номер {{ run.id }}</h3></caption>
+                            <tr class="fa-2x">
                                 <th>Дата</th>
                                 <th>Время</th>
                                 <th>Место</th>
                             </tr>
 
-                            <tr>
+                            <tr class="fa-2x">
                                 <td>{{ run.date }}</td>
                                 <td>{{ run.time }}</td>
                                 <td>{{ run.place }}</td>
                             </tr>
                         </table>
 
-                        <h4>Лошади</h4>
+                        <div class="fa-2x">Участники: </div>
                         {% for horse in run.get_horses %}
                               <h4>
-                                  <a class="active" href={% url "run_url" %}?id={{ run.id }}&horse={{ horse.id }}>
-                                      {{ horse.id }}        -     {{ horse.name }}     -     {{ horse.age }}
+                                  <a  href={% url "run_url" %}?id={{ run.id }}&horse={{ horse.id }}>
+                                      {{ horse.id }}        -     {{ horse.name }}     -     {{ horse.age }} Лет
                                   </a>
                               </h4>
                         {% endfor %}
