--- a/templates/runs_list.html
+++ b/templates/runs_list.html
@@ -15,72 +15,72 @@
         <div class="container">
             <div class="row">
                 {% if request.user.is_authenticated %}
-                    <div class="col-lg-1 col-lg-offset-2">
-                    <table>
+                    <div class="col-xs-6 col-xs-offset-0 centered">
+                        <table>
 
-                        <caption class="fa-3x"><a href={% url "runs_url" %}> Забеги  </a></caption>
+                            <caption class="fa-3x centered"><a href={% url "runs_url" %}> Забеги  </a></caption>
 
-                        <tr>
-                            <th>Номер</th>
-                            <th>Дата</th>
-                            <th>Время</th>
-                            <th>Место</th>
-                        </tr>
-
-                        {% for run in runs %}
                             <tr>
-                                <td><h4><a href={% url "run_url"%}?id={{ run.id }} >  {{ run.id }}  </a> </h4> </td>
-                                <td><h4>{{ run.date }}</h4></td>
-                                <td><h4>{{ run.time }}</h4></td>
-                                <td><h4>{{ run.place }}</h4></td>
+                                <th>Номер</th>
+                                <th>Дата</th>
+                                <th>Время</th>
+                                <th>Место</th>
                             </tr>
-                        {% endfor %}
 
-                        <div class="col-lg-2 col-lg-offset-7">
-                            <h2>
-
-                            </h2>
-                        </div>
-                    </table>
-                    </div>
-                        <span class="page-links">
-                        {% if page_obj.has_previous %}
-                            <a class="aquo" href="/runs?page={{ page_obj.previous_page_number }}">&laquo;</a>
-                        {% else %}
-                            <span class="unavailable" href="">&laquo;</span>
-                        {% endif %}
-                        {% for page in page_obj.paginator.page_range%}
-                            {% if page %}
-                                {% ifequal page page_obj.number %}
-                                    <span class="current-page" href="">{{ page }}</span>
-                                {% else %}
-                                    <a href="/runs?page={{ page }}" class="page">{{ page }}</a>
-                                {% endifequal %}
+                            {% for run in runs %}
+                                <tr>
+                                <a href={% url "run_url"%}?id={{ run.id }} >  {{ run.id }}
+                                    <td><h4><a href={% url "run_url"%}?id={{ run.id }} >  {{ run.id }}  </a> </h4> </td>
+                                    <td><h4><a href={% url "run_url"%}?id={{ run.id }} >  {{ run.date }}</a></h4></td>
+                                    <td><h4><a href={% url "run_url"%}?id={{ run.id }} >  {{ run.time }}</a></h4></td>
+                                    <td><h4><a href={% url "run_url"%}?id={{ run.id }} >  {{ run.place }}</a></h4></td>
+                                </a>
+                                </tr>
+                            {% endfor %}
+                        </table>
+                            <span class="page-links">
+                            {% if page_obj.has_previous %}
+                                <a class="aquo" href="/runs?page={{ page_obj.previous_page_number }}">&laquo;</a>
+                            {% else %}
+                                <span class="unavailable" href="">&laquo;</span>
                             {% endif %}
-                        {% endfor %}
-                        {% if page_obj.has_next %}
-                            <a class="aquo" href="/runs?page={{ page_obj.next_page_number }}">&raquo;</a>
-                        {% else %}
-                            <span class="unavailable" href="">&raquo;</span>
-                        {% endif %}
-                        <span hidden id="per-page">{{ page_obj.paginator.per_page }}</span>
-                    </span>
-
-                {% else %}
-                    <div class="col-lg-12 col-lg-offset-0">
-                        <h2>Чтобы просматривать таблицу, нужно авторизоваться</h2>
+                            {% for page in page_obj.paginator.page_range%}
+                                {% if page %}
+                                    {% ifequal page page_obj.number %}
+                                        <span class="current-page" href="">{{ page }}</span>
+                                    {% else %}
+                                        <a href="/runs?page={{ page }}" class="page">{{ page }}</a>
+                                    {% endifequal %}
+                                {% endif %}
+                            {% endfor %}
+                            {% if page_obj.has_next %}
+                                <a class="aquo" href="/runs?page={{ page_obj.next_page_number }}">&raquo;</a>
+                            {% else %}
+                                <span class="unavailable" href="">&raquo;</span>
+                            {% endif %}
+                            <span hidden id="per-page">{{ page_obj.paginator.per_page }}</span>
+                        </span>
                     </div>
+                {% if request.user.is_staff %}
+                    <div class="col-xs-3">
+
+                    <br><br><br>
+                    <a href={% url "run_add_url" %}>
+                        <button>Add</button>
+                    </a>
+
+                    <a href="#course-add-modal" data-toggle="modal">
+                                <div class="add-button">WWWWWWWWWWWWWWWWWWWWW</div>
+                            </a>
+
+                    </div>
+
+                {% endif %}
+
                 {% endif %}
             </div>
         </div>
 
-    <a href={% url "run_add_url" %}>
-        <button>Add</button>
-    </a>
-
-    <a href="#course-add-modal" data-toggle="modal">
-                <div class="add-button">WWWWWWWWWWWWWWWWWWWWW</div>
-            </a>
 
         <div id="course-add-modal" class="modal fade">
           <div class="modal-dialog">
