--- a/mainapp/static/Bootstrap/css/main.css
+++ b/mainapp/static/Bootstrap/css/main.css
@@ -156,7 +156,7 @@ th {
 td {
     text-align: center;
     font-size: 0.8em;
-    padding: 5px 7px;
+    padding: 10px 12px;
     border: 1px solid #A9E2CC;
 }
 
@@ -165,10 +165,38 @@ table td a,h4{
    font-family: "Lato", "Mistral", sans-serif;
 }
 
-table tr a{display: block; width: 100%; height: 100%}
+table tr{
+    min-width: 200px;
+}
+
+table tr a{
+    display: block;
+    width: auto;
+    height: 100%;
+    white-space: pre-line;
+    min-width: 200px;
+}
 
 
 caption{
     padding: 10px;
     font-size: 30px;
+}
+
+.container1 {
+	margin: 80px auto;
+	width: 90%;
+	max-width: 800px;
+}
+
+.registration {
+	background-color: #fff;
+    text-align: right;
+    padding-right: 150px;
+	max-width: 600px;
+	margin: 0 auto;
+    margin-top: 50px;
+	padding-bottom: 20px;
+	box-shadow: 1px 1px 5px 0 rgba(0,0,0,0.3);
+	border-bottom: 5px solid #ffdb3a;
 }
