--- a/templates/login.html
+++ b/templates/login.html
@@ -1,8 +1,9 @@
 {% extends "base.html" %}
 
 {% block body1 %}
-    <div class="col-xs-4 col-xs-offset-4 centered">
-            <div id="headerwrap1">
+                <div class="container1">
+
+                <div class="registration">
                 <br><br>
                 <form action="" method="post">
                    {% csrf_token %}
