--- a/templates/registration.html
+++ b/templates/registration.html
@@ -2,10 +2,7 @@
 
 {%  block head_buttons %}
 
-      <li><a href="">Домой</a></li>
-      <li><a href="">Инфо</a></li>
-      <li><a href="">Товары</a></li>
-      <li><a href="#">Контакты</a></li>
+
 {#      <li><a href={% url "good_numb_url" 1%}><i class="fa fa-envelope-o" aria-hidden="true"></i></a></li>#}
 
 {% endblock %}
@@ -14,10 +11,13 @@
 
 {% block body1 %}
 {#<div class="container">#}
-{#    <div class="row">#}
-        <div class="col-xs-4 col-xs-offset-4 centered">
-            <div id="headerwrap1">
-                <div class="row">
+
+{#        <div class="col-lg-4 col-lg-offset-4 centered">#}
+         <div class="container1 centered">
+            <div class="row">
+                <div class="registration">
+                <h1>Регистрация</h1>
+
 {#            <div class="col-lg-12">#}
 
                 <form action="" method="post">
@@ -28,11 +28,16 @@
                     {{ form.as_p }}
                     <button type="submit">Зарегистрироваться</button>
                     <br>
-                    <button href={% url "login_url" %}>Войти</button>
                     <br>
 
                 </form>
-                </div>
+                <form method="get" action={% url "login_url" %}>
+                    <button>Войти</button>
+                </form>
+
+
+
+</div>
             </div>
         </div>
 {% endblock %}
