--- a/templates/run_add.html
+++ b/templates/run_add.html
@@ -48,10 +48,10 @@
 
 {% block body1 %}
 
-    <div class="container">
+    <div class="container1 right">
         <div class="row">
-    <div class="col-lg-5 col-lg-offset-3">
-        <div id = "headerwrap1">
+{#    <div class="col-lg-5 col-lg-offset-3">#}
+        <div class="registration">
             <h2>{{ main_text }}</h2>
             <br><br>
 
@@ -74,6 +74,6 @@
         </div>
         </div>
         </div>
-    </div>
+{#    </div>#}
 
 {% endblock %}
