--- a/templates/run.html
+++ b/templates/run.html
@@ -1,86 +1,72 @@
 {%  extends 'base.html' %}
 
 {%  block head_buttons %}
-
-      <li><a href=''>Домой</a></li>
-      <li><a href=''>Инфо</a></li>
-      <li class="active"><a href=''>Лошади</a></li>
-      <li><a href="#">Контакты</a></li>
-{#      <li><a href={% url "good_numb_url" 1%}><i class="fa fa-envelope-o" aria-hidden="true"></i></a></li>#}
-
 {% endblock %}
 
 
 {% block body1 %}
 
-        <div class="container">
-            <div class="row">
-                {% if request.user.is_authenticated %}
-                    <div class="col-lg-8 center">
-{#                        {% if horse.photo %}#}
-{#                            <img src="{{ horse.photo.url }}" width="30%" height="30%">#}
-{#                        {% endif %}#}
-                        <caption class="fa-3x"><a href={% url "runs_url" %}> К списку забегов  </a></caption>
+<div class="container">
+    <div class="row">
+    <br><br>
+        {% if request.user.is_authenticated %}
+            <div class="col-lg-1">
+                <a href={% url "runs_url" %}>
+                    <div class="fa fa-arrow-circle-left"></div>
+                </a>
 
-                        <table>
-                      {% for run in runs %}
-                            <h3>Забег номер {{ run.id }}</h3>
+            </div>
 
-                            <tr href="#" data-href-template="#" class="fa-2x">
-                                <th>Дата</th>
-                                <th>Время</th>
-                                <th>Место</th>
+            <div class="col-lg-8">
+                {% for run in runs %}
+                    <table>
+                        <caption class="centered"><h3>Забег номер {{ run.id }}</h3></caption>
+                        <tr>
+                            <th>Дата</th>
+                            <th>Время</th>
+                            <th>Место</th>
+                        </tr>
 
-
-
-
-                            </tr>
-
-                                <tr>
-                                    <td>{{ run.date }}</td>
-                                    <td>{{ run.time }}</td>
-                                    <td>{{ run.id }}</td>
-
-                                </tr>
-
-
-
-
-    {#                        <div class="col-lg-2 col-lg-offset-7">#}
-    {#                            <h2>#}
-    {#                                <a href={% url "goods_add_url" %}>Добавить лошадь</a>#}
-    {#                            </h2>#}
-    {#                        </div>#}
-                        </table>
-                          <h4>Лошади</h4>
+                        <tr>
+                            <td><h4>{{ run.date }}</h4></td>
+                            <td><h4>{{ run.time }}</h4></td>
+                            <td><h4>{{ run.place }}</h4></td>
+                        </tr>
+                    </table>
+            </div>
+            <div class="col-lg-3">
+                        <div>Участники: </div>
                         {% for horse in run.get_horses %}
-
-                          <h4><a href={% url "runs_url" %}?id={{ run.id }}&horse={{ horse.id }}>
-                                {{ horse.id }}        -     {{ horse.name }}     -     {{ horse.age }}
-                              </a>
-                          </h4>
-
+                              <h4>
+                                  <a  href={% url "runs_url" %}?id={{ run.id }}&horse={{ horse.id }}>
+                                      {{ horse.id }}        -     {{ horse.name }}     -     {{ horse.age }} Лет
+                                  </a>
+                              </h4>
                         {% endfor %}
+            </div>
+                {% endfor %}
 
-                      {% endfor %}
-                    </div>
-                    <div class="col-lg-5 col-lg-offset-8">
+            {% if horse_id != None %}
+                <form method="POST">
+                     {% csrf_token %}
 
-                    <div><h1>{{ horse_id }}</h1></div>
+                         <label>
+                            Сумма ставки <div class="h4"> {{ money_error }} </div>
+                         </label>
 
+                        <div class="form-block">
+                            <input type="text" name="money">
+                        </div>
+
+                <button type="submit">Сделать ставку</button>
+                </form>
             {% endif %}
 
-                        <br><br>
-                        {% for user in horse.get_bet %}
-                            <h1>{{ h }}</h1>
-                        {% endfor %}
-                    </div>
+        <br>
+        {% endif %}
+    </div>
 
-{#                {% else %}#}
-{#                    <div class="col-lg-12 col-lg-offset-0">#}
-{#                        <h2>Чтобы просматривать таблицу, нужно авторизоваться</h2>#}
-{#                    </div>#}
+</div>
 
 
-        </div>
 {% endblock %}
