--- a/templates/runs_list1.html
+++ b/templates/runs_list1.html
@@ -1,5 +1,12 @@
 {%  extends 'base.html' %}
 
+{% block scripts %}
+
+    <script src="scroll-startstop.events.jquery.js" type="text/jаvascript"></script>
+
+{% endblock %}
+
+
 {%  block head_buttons %}
     {% if request.user.is_staff %}
         <li><a href={% url "run_add_url" %}>Добавить забег</a></li>
@@ -9,176 +16,63 @@
 
 
 {% block body1 %}
+
+
     <div class="container">
         <div class="row">
             <div class="col-lg-12 centered">
 
                 <h2><a href={% url "runs_url" %}> Забеги  </a></h2>
 
-                    {% for run in runs %}
-        <div class="infinite-container">
-            <div class="infinite-item">
-                {#                    <h3>{{ run.id }}</h3>#}
-                {#                    <p>#}
-                {#                      <small>{{ run.date }} </small>#}
-                {#                    </p>#}
+                {% for run in runs %}
 
-                {#                     <tr>#}
+                <div class="infinite-container">
+                    <div class="infinite-item">
 
-                <a href={% url "run_url"%}?id={{ run.id }} >
-                    <button>
-                        {% if run.place_image.url != None %}
-                            <img alt="None" src="{{ run.place_image.url }}" width=500px height=200px>
-                        {% endif %}
-                        <h4><small> Забег номер: {{ run.id }}     </small></h4>
-                        <h4><small> {{ run.date }}  </small></h4>
-                        <h4><small> {{ run.time }}  </small></h4>
-                        <h4><small> {{ run.place }} </small></h4>
-                    </button>
-                </a>
-                <br><br><br>
-                {#                    </tr>#}
+                        <a href={% url "runs_url"%}?id={{ run.id }} >
+                            <button>
+                                {% if run.place_image.url != None %}
+                                    <img alt="None" src="{{ run.place_image.url }}" width=500px height=200px>
+                                {% endif %}
+                                <h4><small> Забег номер: {{ run.id }}     </small></h4>
+                                <h4><small> {{ run.date }}  </small></h4>
+                                <h4><small> {{ run.time }}  </small></h4>
+                                <h4><small> {{ run.place }} </small></h4>
+                            </button>
+                        </a>
+                        <br><br><br>
+                    </div>
+                </div>
+
+                {% endfor %}
             </div>
+
+            <div class="loading" style="display: none;">
+                Loading...
+            </div>
+
+            {% if page_obj.has_next %}
+                <a class="infinite-more-link" href="?page={{ page_obj.next_page_number }}">More</a>
+            {% endif %}
         </div>
-    {% endfor %}
-
-
-
-
-    <div class="loading" style="display: none;">
-        Loading...
     </div>
 
-    {% if page_obj.has_next %}
-        <a class="infinite-more-link" href="?page={{ page_obj.next_page_number }}">More</a>
-    {% endif %}
+<div style="display:none;" class="nav_up" id="nav_up"></div>
 
 
-
-
-            </div>
-        </div>
-
-    </div>
-
-{#    <tr>#}
-{#        <th>Номер</th>#}
-{#        <th>Дата</th>#}
-{#        <th>Время</th>#}
-{#        <th>Место</th>#}
-{#    </tr>#}
-
-
-
-
-
-  <script>
+<script>
     var infinite = new Waypoint.Infinite({
-      element: $('.infinite-container')[0],
-      onBeforePageLoad: function () {
-        $('.loading').show();
-      },
-      onAfterPageLoad: function ($items) {
-        $('.loading').hide();
-      }
+          element: $('.infinite-container')[0],
+          onBeforePageLoad: function () {
+                $('.loading').show();
+          },
+
+          onAfterPageLoad: function ($items) {
+                $('.loading').hide();
+          }
     });
-  </script>
+</script>
 
 
 
-
-
-{##}
-{##}
-{#        <div class="container">#}
-{#            <div class="row">#}
-{#                {% if request.user.is_authenticated %}#}
-{#                    <div class="col-xs-6 col-xs-offset-0 centered">#}
-{#                        <table>#}
-{##}
-{#                            <caption class="fa-3x centered"><a href={% url "runs_url" %}> Забеги  </a></caption>#}
-{##}
-{#                            <tr>#}
-{#                                <th>Номер</th>#}
-{#                                <th>Дата</th>#}
-{#                                <th>Время</th>#}
-{#                                <th>Место</th>#}
-{#                            </tr>#}
-{##}
-{#                            {% for run in runs %}#}
-{#                                <tr>#}
-{#                                <a href={% url "run_url"%}?id={{ run.id }} >  {{ run.id }}#}
-{#                                    <td><h4><a href={% url "run_url"%}?id={{ run.id }} >  {{ run.id }}  </a> </h4> </td>#}
-{#                                    <td><h4><a href={% url "run_url"%}?id={{ run.id }} >  {{ run.date }}</a></h4></td>#}
-{#                                    <td><h4><a href={% url "run_url"%}?id={{ run.id }} >  {{ run.time }}</a></h4></td>#}
-{#                                    <td><h4><a href={% url "run_url"%}?id={{ run.id }} >  {{ run.place }}</a></h4></td>#}
-{#                                </a>#}
-{#                                </tr>#}
-{#                            {% endfor %}#}
-{#                        </table>#}
-{#                            <span class="page-links">#}
-{#                            {% if page_obj.has_previous %}#}
-{#                                <a class="aquo" href="/runs?page={{ page_obj.previous_page_number }}">&laquo;</a>#}
-{#                            {% else %}#}
-{#                                <span class="unavailable" href="">&laquo;</span>#}
-{#                            {% endif %}#}
-{#                            {% for page in page_obj.paginator.page_range%}#}
-{#                                {% if page %}#}
-{#                                    {% ifequal page page_obj.number %}#}
-{#                                        <span class="current-page" href="">{{ page }}</span>#}
-{#                                    {% else %}#}
-{#                                        <a href="/runs?page={{ page }}" class="page">{{ page }}</a>#}
-{#                                    {% endifequal %}#}
-{#                                {% endif %}#}
-{#                            {% endfor %}#}
-{#                            {% if page_obj.has_next %}#}
-{#                                <a class="aquo" href="/runs?page={{ page_obj.next_page_number }}">&raquo;</a>#}
-{#                            {% else %}#}
-{#                                <span class="unavailable" href="">&raquo;</span>#}
-{#                            {% endif %}#}
-{#                            <span hidden id="per-page">{{ page_obj.paginator.per_page }}</span>#}
-{#                        </span>#}
-{#                    </div>#}
-{#                {% if request.user.is_staff %}#}
-{#                    <div class="col-xs-3">#}
-{##}
-{#                    <br><br><br>#}
-{#                    <a href={% url "run_add_url" %}>#}
-{#                        <button>Add</button>#}
-{#                    </a>#}
-{##}
-{#                    <a href="#course-add-modal" data-toggle="modal">#}
-{#                                <div class="add-button">WWWWWWWWWWWWWWWWWWWWW</div>#}
-{#                            </a>#}
-{##}
-{#                    </div>#}
-{##}
-{#                {% endif %}#}
-{##}
-{#                {% endif %}#}
-{#            </div>#}
-{#        </div>#}
-{##}
-{##}
-{#        <div id="course-add-modal" class="modal fade">#}
-{#          <div class="modal-dialog">#}
-{#            <div class="modal-content">#}
-{#              <div class="modal-header">#}
-{#                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>#}
-{#                <h2 class="modal-title">Добавление нового забега</h2>#}
-{#              </div>#}
-{#                {{ form.form }}#}
-{#              <div class="modal-body">#}
-{#                  <form method= "POST" enctype="multipart/form-data">#}
-{#                    <div class="add-form container">#}
-{#                        {% csrf_token %}#}
-{#                        {{ form.as_p }}#}
-{#                    </form>#}
-{#              </div>#}
-{#              <div class="modal-footer">#}
-{#                <button type="button" class="btn btn-default" data-dismiss="modal">Закрыть</button>#}
-{#              </div>#}
-{#            </div>#}
-{#          </div>#}
-{#        </div>#}
 {% endblock %}
