--- a/templates/runs_list.html
+++ b/templates/runs_list.html
@@ -21,8 +21,10 @@
             <div class="col-lg-12">
                 <table>
 
-                    <caption class="fa-5x centered"><a href={% url "runs1_url" %}> Забеги  </a></caption>
-
+                <!--
+                    <caption class="fa-5x centered"><a href={% url "runs1_url" %}> События  </a></caption>
+                -->
+                    <caption class="fa-3x centered"><a href={% url "runs1_url" %}> События  </a></caption>
                     <tr>
                         <th>Номер</th>
                         <th>Дата</th>
@@ -81,7 +83,7 @@
 
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                <h2 class="modal-title">Добавление нового забега</h2>
+                <h2 class="modal-title">Добавление нового события</h2>
             </div>
 
             <div class="modal-body">
